# zenith

./: CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  analysis_options.yaml  download_dependencies.sh  download_flutter_engine.sh  install_compilation_dependencies.sh  install_dependencies_arch_linux.sh  install_dependencies_debian.sh  install_runtime_dependencies.sh  lsan_suppressions.txt  main.c  main.cpp  pubspec.yaml
.github/workflows/: main.yml
.run/: deb_package.run.xml  debug_bundle.run.xml  flutter_build_debug.run.xml  flutter_build_profile.run.xml  flutter_build_release.run.xml  profile_bundle.run.xml  release_bundle.run.xml
dpkg/DEBIAN/: control
lib/: action_buttons.dart  custom_box_decoration.dart  custom_stack.dart  desktop_state.dart  display_brightness.dart  enums.dart  main.dart  platform_api.dart  platform_api.g.dart  popup.dart  popup_state.dart  services.dart  surface_manager.dart  title_bar.dart  util.dart  window.dart  window_stack.dart  window_state.dart
lib/dbus/: dbus.dart
lib/state/: app_drawer_state.dart  app_drawer_state.freezed.dart  app_drawer_state.g.dart  base_view_state.dart  base_view_state.freezed.dart  desktop_state.dart  display_brightness_state.dart  display_brightness_state.freezed.dart  key_tracker.dart  key_tracker.freezed.dart  lock_screen_state.dart  lock_screen_state.freezed.dart  popup_state.dart  popup_state.freezed.dart  power_menu_state.dart  power_menu_state.freezed.dart  screen_state.dart  screen_state.freezed.dart  task_state.dart  task_state.freezed.dart  task_switcher_state.dart  task_switcher_state.freezed.dart  virtual_keyboard_state.dart  virtual_keyboard_state.freezed.dart  window_state.dart  window_state.freezed.dart  zenith_subsurface_state.freezed.dart  zenith_surface_state.dart  zenith_surface_state.freezed.dart  zenith_xdg_popup_state.dart  zenith_xdg_popup_state.freezed.dart  zenith_xdg_surface_state.dart  zenith_xdg_surface_state.freezed.dart  (+1 more)
logs/: README.md  segfault1.txt  segfault2.txt  segfault3.txt
src/: create_shared_egl_context.cpp  create_shared_egl_context.hpp  double_buffering.hpp  double_buffering.tpp  fix_y_flip.c  fix_y_flip.cpp  fix_y_flip.h  fix_y_flip.hpp  flutland_structs.h  flutland_structs.hpp  flutter_callbacks.c  flutter_callbacks.cpp  flutter_callbacks.h  flutter_callbacks.hpp  input_callbacks.cpp  input_callbacks.hpp  keyboard.cpp  keyboard.hpp  main.c  main.cpp  mouse_button_tracker.cpp  mouse_button_tracker.hpp  new_texture_stream_handler.hpp  output.cpp  output.hpp  output_callbacks.c  output_callbacks.cpp  output_callbacks.h  output_callbacks.hpp  platform_methods.cpp  platform_methods.hpp  pointer.cpp  pointer.hpp  render_to_texture_shader.cpp  render_to_texture_shader.hpp  render_view.cpp  render_view.hpp  server.cpp  server.hpp  surface_buffer_chain.cpp  (+18 more)
(+284 files in other folders)
